Correction du bouton quantité pour la navigation firefox / suppression du ficher footer-menu-widget.php dans le dossier template-parts car inutile pour l'affichage du site, aucune modif apporté

--- a/css/theme.css
+++ b/css/theme.css
@@ -193,7 +193,7 @@ input::-webkit-inner-spin-button {
 }
 
 input[type=number] {
-    -moz-appearance: "textfield";
+    -moz-appearance: textfield;
   }
 
             /*Bouton ok*/
